javafx + db + prediction